Attempted fix of overflow in key references

--- a/style.css
+++ b/style.css
@@ -172,6 +172,8 @@ ul {
 
 .key-references ul li a{
     color: #000000;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 }
 
 .abstract {
